4단계-로또 수동 기능 추가2